--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "3.1.1"
   },
   "scripts": {
-    "start": "process.env.PORT react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
