--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "concurrently \"cd back-end && node server.js\" \"cd front-end && npm start\"",
+    "build": "concurrently \"cd back-end && node server.js\" \"cd front-end && npm run build\"",
     "test": "mocha"
   },
   "repository": {
