--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"cd back-end && node server.js\" \"cd front-end && npm start\"",
-    "build": "concurrently \"cd back-end && node server.js\" \"cd front-end && npm run build\"",
+    "start": "concurrently \"cd back-end && node server.js\" \"cd front-end && npm run build\"",
     "test": "mocha"
   },
   "repository": {
